2000-08-09  Andreas Schwab  <schwab@suse.de>

	* stdio-common/vfprintf.c (vfprintf): Also set `is_long' if the
	long long modifier is seen.

	* elf/nodelete.c (do_test): Remove reference to undefined member
	sa_restorer.
	* rt/tst-aio4.c (do_test): Likewise.

	* configure.in: Add `-lm' when checking for libgd.
	* malloc/Makefile ($(objpfx)memusagestat): Add `-lm' during
	linking.

2000-08-09  Andreas Jaeger  <aj@suse.de>

	* configure.in: Change required make versions.

	* manual/install.texi (Tools for Compilation): Document required
	make version.
	(Supported Configurations): Update list of supported
	configurations.
	
2000-08-08  Ulrich Drepper  <drepper@redhat.com>

	* locale/linereader.c (get_string): Don't print an error is a string
	contains an unknown character.

2000-08-06  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-collate.c (struct symbol_t): Add name element.
	(new_symbol): Take new parameters with name of the symbol.
	Adjust callers.
	(handle_ellipsis): Don't only allow character symbols.
	(collate_read): Allow string of collating elements contain invalid
	characters; ignore entry in this case.
	Handle ellipsis of collating symbols before first order_start.
	Allow ellipsis in state 0.

2000-08-04  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-collate.c (handle_ellipsis): Fix typo in
	error message.
	Reported by Tung-Han Hsieh <thhsieh@twcpro.phys.ntu.edu.tw>.

2000-08-04  Greg McGary  <greg@mcgary.org>

	* posix/regex.c (SET_HIGH_BOUND): New macro.
	(MOVE_BUFFER_POINTER): Use it.
	(ELSE_EXTEND_BUFFER_HIGH_BOUND): New macro.
	(EXTEND_BUFFER): Use it.

2000-08-03  Ulrich Drepper  <drepper@redhat.com>

	* libio/iofwide.c (_IO_fwide): Initialize fp->_codecvt as well.
	* libio/fileops.c (_IO_new_file_fopen): Use _codecvt not from
	_wide_data but from _IO_FILE directly.
	* libio/iofclose.c: Likewise.
	* libio/wfileops.c: Likewise.

	* libio/genops.c (_IO_default_showmanyc): Change return type to size_t.